# cotl-knucklebones

./: .gitignore  README.md  pyproject.toml
src/game/: board.py  dice.py  game.py  player.py
src/tui/: main.py  template.py  tui.py
tests/: conftest.py  test_board.py  test_dice.py  test_line.py
